// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots InlineNotification Default 1`] = `
<p
  className="sc-bxivhb gWsGB"
>
  <span
    className="sc-htpNat frObKr"
  >
    <span
      className="sc-htpNat hKonPW"
    >
      <span
        aria-hidden={true}
        className="sc-iwsKbI jSMqMr"
        dangerouslySetInnerHTML={
          Object {
            "__html": "test-file-stub",
          }
        }
        role="img"
      />
    </span>
    <span
      className="sc-htpNat frObKr"
    >
      Something is wrong!
    </span>
  </span>
</p>
`;

exports[`Storyshots InlineNotification With children 1`] = `
<p
  className="sc-bxivhb bfQmQc"
>
  <span
    className="sc-htpNat frObKr"
  >
    <span
      className="sc-htpNat hKonPW"
    >
      <span
        aria-hidden={true}
        className="sc-iwsKbI jSMqMr"
        dangerouslySetInnerHTML={
          Object {
            "__html": "test-file-stub",
          }
        }
        role="img"
      />
    </span>
    <span
      className="sc-htpNat frObKr"
    >
      Are you having trouble? Check out 
      <a
        className="sc-hSdWYo MukmX"
        href="http://google.com"
        target={undefined}
        title="some resource"
      >
        this
      </a>
       resource for more info.
    </span>
  </span>
</p>
`;

exports[`Storyshots InlineNotification With overwritten Icon 1`] = `
<p
  className="sc-bxivhb gWsGB"
>
  <span
    className="sc-htpNat frObKr"
  >
    <span
      className="sc-htpNat hKonPW"
    >
      <span
        aria-hidden={true}
        className="sc-iwsKbI jSMqMr"
        dangerouslySetInnerHTML={
          Object {
            "__html": "test-file-stub",
          }
        }
        role="img"
      />
    </span>
    <span
      className="sc-htpNat frObKr"
    >
      Something is wrong!
    </span>
  </span>
</p>
`;
